--- a/laporanpemakaian_28.rdlc
+++ b/laporanpemakaian_28.rdlc
@@ -315,6 +315,10 @@
           <DataField>Total</DataField>
           <rd:TypeName>System.Int32</rd:TypeName>
         </Field>
+        <Field Name="unit">
+          <DataField>unit</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
       </Fields>
       <rd:DataSetInfo>
         <rd:DataSetName>PerbaikanForm</rd:DataSetName>
@@ -2944,41 +2948,6 @@
                   <PaddingBottom>2pt</PaddingBottom>
                 </Style>
               </Textbox>
-              <Textbox Name="Textbox51">
-                <CanGrow>true</CanGrow>
-                <KeepTogether>true</KeepTogether>
-                <Paragraphs>
-                  <Paragraph>
-                    <TextRuns>
-                      <TextRun>
-                        <Value />
-                        <Style>
-                          <FontWeight>SemiBold</FontWeight>
-                        </Style>
-                      </TextRun>
-                    </TextRuns>
-                    <Style>
-                      <TextAlign>Center</TextAlign>
-                    </Style>
-                  </Paragraph>
-                </Paragraphs>
-                <rd:DefaultName>Textbox44</rd:DefaultName>
-                <Left>4.11503cm</Left>
-                <Height>0.61809cm</Height>
-                <Width>4.07288cm</Width>
-                <ZIndex>2</ZIndex>
-                <Style>
-                  <Border>
-                    <Style>Solid</Style>
-                    <Width>0.25pt</Width>
-                  </Border>
-                  <VerticalAlign>Middle</VerticalAlign>
-                  <PaddingLeft>2pt</PaddingLeft>
-                  <PaddingRight>2pt</PaddingRight>
-                  <PaddingTop>2pt</PaddingTop>
-                  <PaddingBottom>2pt</PaddingBottom>
-                </Style>
-              </Textbox>
               <Textbox Name="Textbox52">
                 <CanGrow>true</CanGrow>
                 <KeepTogether>true</KeepTogether>
@@ -3001,7 +2970,7 @@
                 <Left>8.18792cm</Left>
                 <Height>0.61809cm</Height>
                 <Width>15.64416cm</Width>
-                <ZIndex>3</ZIndex>
+                <ZIndex>2</ZIndex>
                 <Style>
                   <Border>
                     <Style>Solid</Style>
@@ -3036,7 +3005,7 @@
                 <Left>23.83231cm</Left>
                 <Height>1.51957cm</Height>
                 <Width>3.11831cm</Width>
-                <ZIndex>4</ZIndex>
+                <ZIndex>3</ZIndex>
                 <Style>
                   <Border>
                     <Style>Solid</Style>
@@ -3072,7 +3041,7 @@
                 <Left>8.18792cm</Left>
                 <Height>0.90148cm</Height>
                 <Width>0.55872cm</Width>
-                <ZIndex>5</ZIndex>
+                <ZIndex>4</ZIndex>
                 <Style>
                   <Border>
                     <Style>Solid</Style>
@@ -3108,7 +3077,7 @@
                 <Left>8.74664cm</Left>
                 <Height>0.90148cm</Height>
                 <Width>0.55872cm</Width>
-                <ZIndex>6</ZIndex>
+                <ZIndex>5</ZIndex>
                 <Style>
                   <Border>
                     <Style>Solid</Style>
@@ -3144,7 +3113,7 @@
                 <Left>9.30536cm</Left>
                 <Height>0.90148cm</Height>
                 <Width>0.55872cm</Width>
-                <ZIndex>7</ZIndex>
+                <ZIndex>6</ZIndex>
                 <Style>
                   <Border>
                     <Style>Solid</Style>
@@ -3180,7 +3149,7 @@
                 <Left>9.86408cm</Left>
                 <Height>0.90148cm</Height>
                 <Width>0.55872cm</Width>
-                <ZIndex>8</ZIndex>
+                <ZIndex>7</ZIndex>
                 <Style>
                   <Border>
                     <Style>Solid</Style>
@@ -3216,7 +3185,7 @@
                 <Left>10.4228cm</Left>
                 <Height>0.90148cm</Height>
                 <Width>0.55872cm</Width>
-                <ZIndex>9</ZIndex>
+                <ZIndex>8</ZIndex>
                 <Style>
                   <Border>
                     <Style>Solid</Style>
@@ -3252,7 +3221,7 @@
                 <Left>10.98152cm</Left>
                 <Height>0.90148cm</Height>
                 <Width>0.55872cm</Width>
-                <ZIndex>10</ZIndex>
+                <ZIndex>9</ZIndex>
                 <Style>
                   <Border>
                     <Style>Solid</Style>
@@ -3288,7 +3257,7 @@
                 <Left>11.54024cm</Left>
                 <Height>0.90148cm</Height>
                 <Width>0.55872cm</Width>
-                <ZIndex>11</ZIndex>
+                <ZIndex>10</ZIndex>
                 <Style>
                   <Border>
                     <Style>Solid</Style>
@@ -3324,7 +3293,7 @@
                 <Left>12.09896cm</Left>
                 <Height>0.90148cm</Height>
                 <Width>0.55872cm</Width>
-                <ZIndex>12</ZIndex>
+                <ZIndex>11</ZIndex>
                 <Style>
                   <Border>
                     <Style>Solid</Style>
@@ -3360,7 +3329,7 @@
                 <Left>12.65768cm</Left>
                 <Height>0.90148cm</Height>
                 <Width>0.55872cm</Width>
-                <ZIndex>13</ZIndex>
+                <ZIndex>12</ZIndex>
                 <Style>
                   <Border>
                     <Style>Solid</Style>
@@ -3396,7 +3365,7 @@
                 <Left>13.2164cm</Left>
                 <Height>0.90148cm</Height>
                 <Width>0.55872cm</Width>
-                <ZIndex>14</ZIndex>
+                <ZIndex>13</ZIndex>
                 <Style>
                   <Border>
                     <Style>Solid</Style>
@@ -3432,7 +3401,7 @@
                 <Left>13.77512cm</Left>
                 <Height>0.90148cm</Height>
                 <Width>0.55872cm</Width>
-                <ZIndex>15</ZIndex>
+                <ZIndex>14</ZIndex>
                 <Style>
                   <Border>
                     <Style>Solid</Style>
@@ -3468,7 +3437,7 @@
                 <Left>14.33384cm</Left>
                 <Height>0.90148cm</Height>
                 <Width>0.55872cm</Width>
-                <ZIndex>16</ZIndex>
+                <ZIndex>15</ZIndex>
                 <Style>
                   <Border>
                     <Style>Solid</Style>
@@ -3504,7 +3473,7 @@
                 <Left>14.89256cm</Left>
                 <Height>0.90148cm</Height>
                 <Width>0.55872cm</Width>
-                <ZIndex>17</ZIndex>
+                <ZIndex>16</ZIndex>
                 <Style>
                   <Border>
                     <Style>Solid</Style>
@@ -3540,7 +3509,7 @@
                 <Left>15.45128cm</Left>
                 <Height>0.90148cm</Height>
                 <Width>0.55872cm</Width>
-                <ZIndex>18</ZIndex>
+                <ZIndex>17</ZIndex>
                 <Style>
                   <Border>
                     <Style>Solid</Style>
@@ -3576,7 +3545,7 @@
                 <Left>16.01cm</Left>
                 <Height>0.90148cm</Height>
                 <Width>0.55872cm</Width>
-                <ZIndex>19</ZIndex>
+                <ZIndex>18</ZIndex>
                 <Style>
                   <Border>
                     <Style>Solid</Style>
@@ -3612,7 +3581,7 @@
                 <Left>16.56872cm</Left>
                 <Height>0.90148cm</Height>
                 <Width>0.55872cm</Width>
-                <ZIndex>20</ZIndex>
+                <ZIndex>19</ZIndex>
                 <Style>
                   <Border>
                     <Style>Solid</Style>
@@ -3648,7 +3617,7 @@
                 <Left>17.12744cm</Left>
                 <Height>0.90148cm</Height>
                 <Width>0.55872cm</Width>
-                <ZIndex>21</ZIndex>
+                <ZIndex>20</ZIndex>
                 <Style>
                   <Border>
                     <Style>Solid</Style>
@@ -3684,7 +3653,7 @@
                 <Left>17.68616cm</Left>
                 <Height>0.90148cm</Height>
                 <Width>0.55872cm</Width>
-                <ZIndex>22</ZIndex>
+                <ZIndex>21</ZIndex>
                 <Style>
                   <Border>
                     <Style>Solid</Style>
@@ -3720,7 +3689,7 @@
                 <Left>18.24488cm</Left>
                 <Height>0.90148cm</Height>
                 <Width>0.55872cm</Width>
-                <ZIndex>23</ZIndex>
+                <ZIndex>22</ZIndex>
                 <Style>
                   <Border>
                     <Style>Solid</Style>
@@ -3756,7 +3725,7 @@
                 <Left>18.8036cm</Left>
                 <Height>0.90148cm</Height>
                 <Width>0.55872cm</Width>
-                <ZIndex>24</ZIndex>
+                <ZIndex>23</ZIndex>
                 <Style>
                   <Border>
                     <Style>Solid</Style>
@@ -3792,7 +3761,7 @@
                 <Left>19.36232cm</Left>
                 <Height>0.90148cm</Height>
                 <Width>0.55872cm</Width>
-                <ZIndex>25</ZIndex>
+                <ZIndex>24</ZIndex>
                 <Style>
                   <Border>
                     <Style>Solid</Style>
@@ -3828,7 +3797,7 @@
                 <Left>19.92104cm</Left>
                 <Height>0.90148cm</Height>
                 <Width>0.55872cm</Width>
-                <ZIndex>26</ZIndex>
+                <ZIndex>25</ZIndex>
                 <Style>
                   <Border>
                     <Style>Solid</Style>
@@ -3864,7 +3833,7 @@
                 <Left>20.47976cm</Left>
                 <Height>0.90148cm</Height>
                 <Width>0.55872cm</Width>
-                <ZIndex>27</ZIndex>
+                <ZIndex>26</ZIndex>
                 <Style>
                   <Border>
                     <Style>Solid</Style>
@@ -3900,7 +3869,7 @@
                 <Left>21.03848cm</Left>
                 <Height>0.90148cm</Height>
                 <Width>0.55872cm</Width>
-                <ZIndex>28</ZIndex>
+                <ZIndex>27</ZIndex>
                 <Style>
                   <Border>
                     <Style>Solid</Style>
@@ -3936,7 +3905,7 @@
                 <Left>21.5972cm</Left>
                 <Height>0.90148cm</Height>
                 <Width>0.55872cm</Width>
-                <ZIndex>29</ZIndex>
+                <ZIndex>28</ZIndex>
                 <Style>
                   <Border>
                     <Style>Solid</Style>
@@ -3972,7 +3941,7 @@
                 <Left>22.15592cm</Left>
                 <Height>0.90148cm</Height>
                 <Width>0.55872cm</Width>
-                <ZIndex>30</ZIndex>
+                <ZIndex>29</ZIndex>
                 <Style>
                   <Border>
                     <Style>Solid</Style>
@@ -4008,7 +3977,7 @@
                 <Left>22.71464cm</Left>
                 <Height>0.90148cm</Height>
                 <Width>0.55872cm</Width>
-                <ZIndex>31</ZIndex>
+                <ZIndex>30</ZIndex>
                 <Style>
                   <Border>
                     <Style>Solid</Style>
@@ -4044,7 +4013,7 @@
                 <Left>23.27336cm</Left>
                 <Height>0.90148cm</Height>
                 <Width>0.55872cm</Width>
-                <ZIndex>32</ZIndex>
+                <ZIndex>31</ZIndex>
                 <Style>
                   <Border>
                     <Style>Solid</Style>
@@ -4064,7 +4033,7 @@
                   <Paragraph>
                     <TextRuns>
                       <TextRun>
-                        <Value />
+                        <Value>UNIT</Value>
                         <Style>
                           <FontWeight>SemiBold</FontWeight>
                         </Style>
@@ -4076,11 +4045,10 @@
                   </Paragraph>
                 </Paragraphs>
                 <rd:DefaultName>Textbox44</rd:DefaultName>
-                <Top>0.61809cm</Top>
                 <Left>4.11503cm</Left>
-                <Height>0.90148cm</Height>
+                <Height>1.51957cm</Height>
                 <Width>4.07289cm</Width>
-                <ZIndex>33</ZIndex>
+                <ZIndex>32</ZIndex>
                 <Style>
                   <Border>
                     <Style>Solid</Style>
@@ -4285,14 +4253,14 @@
                     </TablixCell>
                     <TablixCell>
                       <CellContents>
-                        <Textbox Name="Textbox36">
+                        <Textbox Name="unit">
                           <CanGrow>true</CanGrow>
                           <KeepTogether>true</KeepTogether>
                           <Paragraphs>
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value />
+                                  <Value>=Fields!unit.Value</Value>
                                   <Style />
                                 </TextRun>
                               </TextRuns>
@@ -4301,7 +4269,7 @@
                               </Style>
                             </Paragraph>
                           </Paragraphs>
-                          <rd:DefaultName>Textbox36</rd:DefaultName>
+                          <rd:DefaultName>unit</rd:DefaultName>
                           <Style>
                             <Border>
                               <Style>Solid</Style>
@@ -4314,6 +4282,7 @@
                             <PaddingBottom>2pt</PaddingBottom>
                           </Style>
                         </Textbox>
+                        <rd:Selected>true</rd:Selected>
                       </CellContents>
                     </TablixCell>
                     <TablixCell>
