--- a/laporanpemakaian_31.rdlc
+++ b/laporanpemakaian_31.rdlc
@@ -308,6 +308,10 @@
           <DataField>Total</DataField>
           <rd:TypeName>System.Int32</rd:TypeName>
         </Field>
+        <Field Name="unit">
+          <DataField>unit</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
       </Fields>
       <rd:DataSetInfo>
         <rd:DataSetName>PerbaikanForm</rd:DataSetName>
@@ -1693,7 +1697,6 @@
                             <PaddingBottom>2pt</PaddingBottom>
                           </Style>
                         </Textbox>
-                        <rd:Selected>true</rd:Selected>
                       </CellContents>
                     </TablixCell>
                   </TablixCells>
@@ -3166,41 +3169,6 @@
                   <PaddingBottom>2pt</PaddingBottom>
                 </Style>
               </Textbox>
-              <Textbox Name="Textbox51">
-                <CanGrow>true</CanGrow>
-                <KeepTogether>true</KeepTogether>
-                <Paragraphs>
-                  <Paragraph>
-                    <TextRuns>
-                      <TextRun>
-                        <Value />
-                        <Style>
-                          <FontWeight>SemiBold</FontWeight>
-                        </Style>
-                      </TextRun>
-                    </TextRuns>
-                    <Style>
-                      <TextAlign>Center</TextAlign>
-                    </Style>
-                  </Paragraph>
-                </Paragraphs>
-                <rd:DefaultName>Textbox44</rd:DefaultName>
-                <Left>4.11503cm</Left>
-                <Height>0.61809cm</Height>
-                <Width>4.07288cm</Width>
-                <ZIndex>2</ZIndex>
-                <Style>
-                  <Border>
-                    <Style>Solid</Style>
-                    <Width>0.25pt</Width>
-                  </Border>
-                  <VerticalAlign>Middle</VerticalAlign>
-                  <PaddingLeft>2pt</PaddingLeft>
-                  <PaddingRight>2pt</PaddingRight>
-                  <PaddingTop>2pt</PaddingTop>
-                  <PaddingBottom>2pt</PaddingBottom>
-                </Style>
-              </Textbox>
               <Textbox Name="Textbox52">
                 <CanGrow>true</CanGrow>
                 <KeepTogether>true</KeepTogether>
@@ -3223,7 +3191,7 @@
                 <Left>8.18792cm</Left>
                 <Height>0.61809cm</Height>
                 <Width>17.32056cm</Width>
-                <ZIndex>3</ZIndex>
+                <ZIndex>2</ZIndex>
                 <Style>
                   <Border>
                     <Style>Solid</Style>
@@ -3258,7 +3226,7 @@
                 <Left>25.50848cm</Left>
                 <Height>1.51957cm</Height>
                 <Width>1.48889cm</Width>
-                <ZIndex>4</ZIndex>
+                <ZIndex>3</ZIndex>
                 <Style>
                   <Border>
                     <Style>Solid</Style>
@@ -3294,7 +3262,7 @@
                 <Left>8.18792cm</Left>
                 <Height>0.90148cm</Height>
                 <Width>0.55872cm</Width>
-                <ZIndex>5</ZIndex>
+                <ZIndex>4</ZIndex>
                 <Style>
                   <Border>
                     <Style>Solid</Style>
@@ -3330,7 +3298,7 @@
                 <Left>8.74664cm</Left>
                 <Height>0.90148cm</Height>
                 <Width>0.55872cm</Width>
-                <ZIndex>6</ZIndex>
+                <ZIndex>5</ZIndex>
                 <Style>
                   <Border>
                     <Style>Solid</Style>
@@ -3366,7 +3334,7 @@
                 <Left>9.30536cm</Left>
                 <Height>0.90148cm</Height>
                 <Width>0.55872cm</Width>
-                <ZIndex>7</ZIndex>
+                <ZIndex>6</ZIndex>
                 <Style>
                   <Border>
                     <Style>Solid</Style>
@@ -3402,7 +3370,7 @@
                 <Left>9.86408cm</Left>
                 <Height>0.90148cm</Height>
                 <Width>0.55872cm</Width>
-                <ZIndex>8</ZIndex>
+                <ZIndex>7</ZIndex>
                 <Style>
                   <Border>
                     <Style>Solid</Style>
@@ -3438,7 +3406,7 @@
                 <Left>10.4228cm</Left>
                 <Height>0.90148cm</Height>
                 <Width>0.55872cm</Width>
-                <ZIndex>9</ZIndex>
+                <ZIndex>8</ZIndex>
                 <Style>
                   <Border>
                     <Style>Solid</Style>
@@ -3474,7 +3442,7 @@
                 <Left>10.98152cm</Left>
                 <Height>0.90148cm</Height>
                 <Width>0.55872cm</Width>
-                <ZIndex>10</ZIndex>
+                <ZIndex>9</ZIndex>
                 <Style>
                   <Border>
                     <Style>Solid</Style>
@@ -3510,7 +3478,7 @@
                 <Left>11.54024cm</Left>
                 <Height>0.90148cm</Height>
                 <Width>0.55872cm</Width>
-                <ZIndex>11</ZIndex>
+                <ZIndex>10</ZIndex>
                 <Style>
                   <Border>
                     <Style>Solid</Style>
@@ -3546,7 +3514,7 @@
                 <Left>12.09896cm</Left>
                 <Height>0.90148cm</Height>
                 <Width>0.55872cm</Width>
-                <ZIndex>12</ZIndex>
+                <ZIndex>11</ZIndex>
                 <Style>
                   <Border>
                     <Style>Solid</Style>
@@ -3582,7 +3550,7 @@
                 <Left>12.65768cm</Left>
                 <Height>0.90148cm</Height>
                 <Width>0.55872cm</Width>
-                <ZIndex>13</ZIndex>
+                <ZIndex>12</ZIndex>
                 <Style>
                   <Border>
                     <Style>Solid</Style>
@@ -3618,7 +3586,7 @@
                 <Left>13.2164cm</Left>
                 <Height>0.90148cm</Height>
                 <Width>0.55872cm</Width>
-                <ZIndex>14</ZIndex>
+                <ZIndex>13</ZIndex>
                 <Style>
                   <Border>
                     <Style>Solid</Style>
@@ -3654,7 +3622,7 @@
                 <Left>13.77512cm</Left>
                 <Height>0.90148cm</Height>
                 <Width>0.55872cm</Width>
-                <ZIndex>15</ZIndex>
+                <ZIndex>14</ZIndex>
                 <Style>
                   <Border>
                     <Style>Solid</Style>
@@ -3690,7 +3658,7 @@
                 <Left>14.33384cm</Left>
                 <Height>0.90148cm</Height>
                 <Width>0.55872cm</Width>
-                <ZIndex>16</ZIndex>
+                <ZIndex>15</ZIndex>
                 <Style>
                   <Border>
                     <Style>Solid</Style>
@@ -3726,7 +3694,7 @@
                 <Left>14.89256cm</Left>
                 <Height>0.90148cm</Height>
                 <Width>0.55872cm</Width>
-                <ZIndex>17</ZIndex>
+                <ZIndex>16</ZIndex>
                 <Style>
                   <Border>
                     <Style>Solid</Style>
@@ -3762,7 +3730,7 @@
                 <Left>15.45128cm</Left>
                 <Height>0.90148cm</Height>
                 <Width>0.55872cm</Width>
-                <ZIndex>18</ZIndex>
+                <ZIndex>17</ZIndex>
                 <Style>
                   <Border>
                     <Style>Solid</Style>
@@ -3798,7 +3766,7 @@
                 <Left>16.01cm</Left>
                 <Height>0.90148cm</Height>
                 <Width>0.55872cm</Width>
-                <ZIndex>19</ZIndex>
+                <ZIndex>18</ZIndex>
                 <Style>
                   <Border>
                     <Style>Solid</Style>
@@ -3834,7 +3802,7 @@
                 <Left>16.56872cm</Left>
                 <Height>0.90148cm</Height>
                 <Width>0.55872cm</Width>
-                <ZIndex>20</ZIndex>
+                <ZIndex>19</ZIndex>
                 <Style>
                   <Border>
                     <Style>Solid</Style>
@@ -3870,7 +3838,7 @@
                 <Left>17.12744cm</Left>
                 <Height>0.90148cm</Height>
                 <Width>0.55872cm</Width>
-                <ZIndex>21</ZIndex>
+                <ZIndex>20</ZIndex>
                 <Style>
                   <Border>
                     <Style>Solid</Style>
@@ -3906,7 +3874,7 @@
                 <Left>17.68616cm</Left>
                 <Height>0.90148cm</Height>
                 <Width>0.55872cm</Width>
-                <ZIndex>22</ZIndex>
+                <ZIndex>21</ZIndex>
                 <Style>
                   <Border>
                     <Style>Solid</Style>
@@ -3942,7 +3910,7 @@
                 <Left>18.24488cm</Left>
                 <Height>0.90148cm</Height>
                 <Width>0.55872cm</Width>
-                <ZIndex>23</ZIndex>
+                <ZIndex>22</ZIndex>
                 <Style>
                   <Border>
                     <Style>Solid</Style>
@@ -3978,7 +3946,7 @@
                 <Left>18.8036cm</Left>
                 <Height>0.90148cm</Height>
                 <Width>0.55872cm</Width>
-                <ZIndex>24</ZIndex>
+                <ZIndex>23</ZIndex>
                 <Style>
                   <Border>
                     <Style>Solid</Style>
@@ -4014,7 +3982,7 @@
                 <Left>19.36232cm</Left>
                 <Height>0.90148cm</Height>
                 <Width>0.55872cm</Width>
-                <ZIndex>25</ZIndex>
+                <ZIndex>24</ZIndex>
                 <Style>
                   <Border>
                     <Style>Solid</Style>
@@ -4050,7 +4018,7 @@
                 <Left>19.92104cm</Left>
                 <Height>0.90148cm</Height>
                 <Width>0.55872cm</Width>
-                <ZIndex>26</ZIndex>
+                <ZIndex>25</ZIndex>
                 <Style>
                   <Border>
                     <Style>Solid</Style>
@@ -4086,7 +4054,7 @@
                 <Left>20.47976cm</Left>
                 <Height>0.90148cm</Height>
                 <Width>0.55872cm</Width>
-                <ZIndex>27</ZIndex>
+                <ZIndex>26</ZIndex>
                 <Style>
                   <Border>
                     <Style>Solid</Style>
@@ -4122,7 +4090,7 @@
                 <Left>21.03848cm</Left>
                 <Height>0.90148cm</Height>
                 <Width>0.55872cm</Width>
-                <ZIndex>28</ZIndex>
+                <ZIndex>27</ZIndex>
                 <Style>
                   <Border>
                     <Style>Solid</Style>
@@ -4158,7 +4126,7 @@
                 <Left>21.5972cm</Left>
                 <Height>0.90148cm</Height>
                 <Width>0.55872cm</Width>
-                <ZIndex>29</ZIndex>
+                <ZIndex>28</ZIndex>
                 <Style>
                   <Border>
                     <Style>Solid</Style>
@@ -4194,7 +4162,7 @@
                 <Left>22.15592cm</Left>
                 <Height>0.90148cm</Height>
                 <Width>0.55872cm</Width>
-                <ZIndex>30</ZIndex>
+                <ZIndex>29</ZIndex>
                 <Style>
                   <Border>
                     <Style>Solid</Style>
@@ -4230,7 +4198,7 @@
                 <Left>22.71464cm</Left>
                 <Height>0.90148cm</Height>
                 <Width>0.55872cm</Width>
-                <ZIndex>31</ZIndex>
+                <ZIndex>30</ZIndex>
                 <Style>
                   <Border>
                     <Style>Solid</Style>
@@ -4266,7 +4234,7 @@
                 <Left>23.27336cm</Left>
                 <Height>0.90148cm</Height>
                 <Width>0.55872cm</Width>
-                <ZIndex>32</ZIndex>
+                <ZIndex>31</ZIndex>
                 <Style>
                   <Border>
                     <Style>Solid</Style>
@@ -4302,7 +4270,7 @@
                 <Left>23.83208cm</Left>
                 <Height>0.90148cm</Height>
                 <Width>0.55872cm</Width>
-                <ZIndex>33</ZIndex>
+                <ZIndex>32</ZIndex>
                 <Style>
                   <Border>
                     <Style>Solid</Style>
@@ -4338,7 +4306,7 @@
                 <Left>24.40242cm</Left>
                 <Height>0.90148cm</Height>
                 <Width>0.5471cm</Width>
-                <ZIndex>34</ZIndex>
+                <ZIndex>33</ZIndex>
                 <Style>
                   <Border>
                     <Style>Solid</Style>
@@ -4358,7 +4326,7 @@
                   <Paragraph>
                     <TextRuns>
                       <TextRun>
-                        <Value />
+                        <Value>UNIT</Value>
                         <Style>
                           <FontWeight>SemiBold</FontWeight>
                         </Style>
@@ -4370,11 +4338,10 @@
                   </Paragraph>
                 </Paragraphs>
                 <rd:DefaultName>Textbox44</rd:DefaultName>
-                <Top>0.61809cm</Top>
                 <Left>4.11503cm</Left>
-                <Height>0.90148cm</Height>
+                <Height>1.51957cm</Height>
                 <Width>4.07289cm</Width>
-                <ZIndex>35</ZIndex>
+                <ZIndex>34</ZIndex>
                 <Style>
                   <Border>
                     <Style>Solid</Style>
@@ -4410,7 +4377,7 @@
                 <Left>24.96138cm</Left>
                 <Height>0.90148cm</Height>
                 <Width>0.5471cm</Width>
-                <ZIndex>36</ZIndex>
+                <ZIndex>35</ZIndex>
                 <Style>
                   <Border>
                     <Style>Solid</Style>
@@ -4624,14 +4591,14 @@
                     </TablixCell>
                     <TablixCell>
                       <CellContents>
-                        <Textbox Name="Textbox257">
+                        <Textbox Name="unit">
                           <CanGrow>true</CanGrow>
                           <KeepTogether>true</KeepTogether>
                           <Paragraphs>
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value />
+                                  <Value>=Fields!unit.Value</Value>
                                   <Style />
                                 </TextRun>
                               </TextRuns>
@@ -4640,7 +4607,7 @@
                               </Style>
                             </Paragraph>
                           </Paragraphs>
-                          <rd:DefaultName>Textbox257</rd:DefaultName>
+                          <rd:DefaultName>unit</rd:DefaultName>
                           <Style>
                             <Border>
                               <Style>Solid</Style>
@@ -5806,7 +5773,6 @@
                             <PaddingBottom>2pt</PaddingBottom>
                           </Style>
                         </Textbox>
-                        <rd:Selected>true</rd:Selected>
                       </CellContents>
                     </TablixCell>
                   </TablixCells>
@@ -7101,7 +7067,6 @@
                             <PaddingBottom>2pt</PaddingBottom>
                           </Style>
                         </Textbox>
-                        <rd:Selected>true</rd:Selected>
                       </CellContents>
                     </TablixCell>
                   </TablixCells>
