--- a/actual_31.rdlc
+++ b/actual_31.rdlc
@@ -4628,7 +4628,7 @@
                 <DataSetName>datasetactual</DataSetName>
                 <Top>1.00734cm</Top>
                 <Left>0.00006cm</Left>
-                <Height>1.42663cm</Height>
+                <Height>1.42662cm</Height>
                 <Width>29.0185cm</Width>
                 <ZIndex>36</ZIndex>
                 <Style>
@@ -4641,7 +4641,7 @@
             <KeepTogether>true</KeepTogether>
             <Top>0.03589cm</Top>
             <Left>0.34257cm</Left>
-            <Height>2.43396cm</Height>
+            <Height>2.43397cm</Height>
             <Width>29.01856cm</Width>
             <Style>
               <Border>
@@ -10625,6 +10625,47 @@
                   <Style>None</Style>
                 </Border>
                 <VerticalAlign>Middle</VerticalAlign>
+                <PaddingLeft>2pt</PaddingLeft>
+                <PaddingRight>2pt</PaddingRight>
+                <PaddingTop>2pt</PaddingTop>
+                <PaddingBottom>2pt</PaddingBottom>
+              </Style>
+            </Textbox>
+            <Textbox Name="Textbox612">
+              <CanGrow>true</CanGrow>
+              <KeepTogether>true</KeepTogether>
+              <Paragraphs>
+                <Paragraph>
+                  <TextRuns>
+                    <TextRun>
+                      <Value>=Choose(CInt(Parameters!bulan.Value), 
+"Januari", "Februari", "Maret", "April", "Mei", "Juni", 
+"Juli", "Agustus", "September", "Oktober", "November", "Desember") 
+&amp; " " &amp; Parameters!tahun.Value &amp; ", Page " &amp; Globals!PageNumber</Value>
+                      <Style>
+                        <FontStyle>Italic</FontStyle>
+                        <FontFamily>Segoe UI</FontFamily>
+                        <FontSize>6pt</FontSize>
+                        <FontWeight>Light</FontWeight>
+                      </Style>
+                    </TextRun>
+                  </TextRuns>
+                  <Style>
+                    <TextAlign>Right</TextAlign>
+                  </Style>
+                </Paragraph>
+              </Paragraphs>
+              <rd:DefaultName>Textbox1</rd:DefaultName>
+              <Top>1.10491cm</Top>
+              <Left>21.08841cm</Left>
+              <Height>0.6cm</Height>
+              <Width>8.27107cm</Width>
+              <ZIndex>3</ZIndex>
+              <Style>
+                <Border>
+                  <Style>None</Style>
+                </Border>
+                <VerticalAlign>Bottom</VerticalAlign>
                 <PaddingLeft>2pt</PaddingLeft>
                 <PaddingRight>2pt</PaddingRight>
                 <PaddingTop>2pt</PaddingTop>
