--- a/laporanpemakaian_28.rdlc
+++ b/laporanpemakaian_28.rdlc
@@ -4282,7 +4282,6 @@
                             <PaddingBottom>2pt</PaddingBottom>
                           </Style>
                         </Textbox>
-                        <rd:Selected>true</rd:Selected>
                       </CellContents>
                     </TablixCell>
                     <TablixCell>
@@ -6665,9 +6664,9 @@
                 <Paragraph>
                   <TextRuns>
                     <TextRun>
-                      <Value>="Bulan " &amp; Choose(CInt(Parameters!bulan.Value), 
-"Januari", "Februari", "Maret", "April", "Mei", "Juni", 
-"Juli", "Agustus", "September", "Oktober", "November", "Desember") 
+                      <Value>="Month : " &amp; Choose(CInt(Parameters!bulan.Value), 
+"January", "February", "March", "April", "May", "June", 
+"July", "August", "September", "October", "November", "December") 
 &amp; " " &amp; Parameters!tahun.Value</Value>
                       <Style>
                         <FontSize>13pt</FontSize>
