--- a/Rb_Stok.rdlc
+++ b/Rb_Stok.rdlc
@@ -3383,9 +3383,9 @@
                 <Paragraph>
                   <TextRuns>
                     <TextRun>
-                      <Value>="Bulan " &amp; Choose(CInt(Parameters!bulan.Value), 
-"Januari", "Februari", "Maret", "April", "Mei", "Juni", 
-"Juli", "Agustus", "September", "Oktober", "November", "Desember") 
+                      <Value>="Month : " &amp; Choose(CInt(Parameters!bulan.Value), 
+"January", "February", "March", "April", "May", "June", 
+"July", "August", "September", "October", "November", "December") 
 &amp; " " &amp; Parameters!tahun.Value</Value>
                       <Style>
                         <FontFamily>Consolas</FontFamily>
