--- a/actual_30.rdlc
+++ b/actual_30.rdlc
@@ -560,8 +560,8 @@
                     <TextRuns>
                       <TextRun>
                         <Value>="Month : " &amp; Choose(CInt(Parameters!bulan.Value), 
-"Januari", "Februari", "Maret", "April", "Mei", "Juni", 
-"Juli", "Agustus", "September", "Oktober", "November", "Desember") 
+"January", "February", "March", "April", "May", "June", 
+"July", "August", "September", "October", "November", "December") 
 &amp; " " &amp; Parameters!tahun.Value</Value>
                         <Style>
                           <FontSize>6pt</FontSize>
@@ -9812,7 +9812,7 @@
               <Paragraph>
                 <TextRuns>
                   <TextRun>
-                    <Value>ANODE ROD RECEVID QTY. (ASS'Y)</Value>
+                    <Value>ANODE ROD RECEIVED QTY. (ASS'Y)</Value>
                     <Style>
                       <FontFamily>Segoe UI</FontFamily>
                       <FontSize>7pt</FontSize>
@@ -10024,7 +10024,7 @@
                   <Paragraph>
                     <TextRuns>
                       <TextRun>
-                        <Value>MANGER</Value>
+                        <Value>MANAGER</Value>
                         <Style>
                           <FontFamily>Arial Narrow</FontFamily>
                           <FontSize>8pt</FontSize>
