--- a/consumption31.rdlc
+++ b/consumption31.rdlc
@@ -618,10 +618,10 @@
                   <Paragraph>
                     <TextRuns>
                       <TextRun>
-                        <Value>="Month : " &amp; Choose(CInt(Parameters!bulan.Value),
-"Januari", "Februari", "Maret", "April", "Mei", "Juni", 
-"Juli", "Agustus", "September", "Oktober", "November", "Desember"
-) &amp; " " &amp; Parameters!tahun.Value</Value>
+                        <Value>="Month : " &amp; Choose(CInt(Parameters!bulan.Value), 
+"January", "February", "March", "April", "May", "June", 
+"July", "August", "September", "October", "November", "December") 
+&amp; " " &amp; Parameters!tahun.Value</Value>
                         <Style>
                           <FontFamily>Arial Narrow</FontFamily>
                           <FontSize>7pt</FontSize>
@@ -2151,7 +2151,7 @@
                   <Paragraph>
                     <TextRuns>
                       <TextRun>
-                        <Value>MANGER</Value>
+                        <Value>MANAGER</Value>
                         <Style>
                           <FontFamily>Arial Narrow</FontFamily>
                           <FontSize>8pt</FontSize>
