--- a/kondisi_28.rdlc
+++ b/kondisi_28.rdlc
@@ -1468,8 +1468,8 @@
                     <TextRuns>
                       <TextRun>
                         <Value>="Month : " &amp; Choose(CInt(Parameters!bulan.Value), 
-"Januari", "Februari", "Maret", "April", "Mei", "Juni", 
-"Juli", "Agustus", "September", "Oktober", "November", "Desember") 
+"January", "February", "March", "April", "May", "June", 
+"July", "August", "September", "October", "November", "December") 
 &amp; " " &amp; Parameters!tahun.Value</Value>
                         <Style>
                           <FontFamily>Arial Narrow</FontFamily>
