--- a/laporanpemakaian_31.rdlc
+++ b/laporanpemakaian_31.rdlc
@@ -7224,9 +7224,9 @@
                 <Paragraph>
                   <TextRuns>
                     <TextRun>
-                      <Value>="Bulan " &amp; Choose(CInt(Parameters!bulan.Value), 
-"Januari", "Februari", "Maret", "April", "Mei", "Juni", 
-"Juli", "Agustus", "September", "Oktober", "November", "Desember") 
+                      <Value>="Month : " &amp; Choose(CInt(Parameters!bulan.Value), 
+"January", "February", "March", "April", "May", "June", 
+"July", "August", "September", "October", "November", "December") 
 &amp; " " &amp; Parameters!tahun.Value</Value>
                       <Style>
                         <FontSize>13pt</FontSize>
